Yuvi, Joelle | home page | added t and c

--- a/app/static/htmls/contacts.html
+++ b/app/static/htmls/contacts.html
@@ -1,5 +1,6 @@
-<h2>Email:</h2> <a href="knowledgesharingcampaign@gmail.com">Jon Doe</a>
+<h2>Email:</h2> <address> <a href="mailto:charles.mberikimpolo@gmail.com" target="_blank"> </address> knowledgesharingcampaign@gmail.com</a>
 <h2>Office Address:</h2> ThoughtWorks Technologies (India) Pvt Ltd. 3rd Floor, Apurupa Silpi, Beside H.P. Petrol Bunk (KFC Building), Gachibowli, Hyderabad - 500032, India
 <h2>Telephone:</h2> 04012345679
 <h2>Fax:</h2> 04012456787
 <h2></h2>
+
