Yuve,Noordene |#19|Improvement to Contact Us

--- a/app/static/htmls/contacts.html
+++ b/app/static/htmls/contacts.html
@@ -1,6 +1,49 @@
+<head>
+<link rel="stylesheet" type="text/css" href="/static/css/contacts.css">	
+</head>
+<body>
+<h1>CONTACT US:</h1>
+
+<form id="contactform" name="contactform" method="post" action="">
+  <p>
+    <label>FullName :
+      <input type="text" name="Name" id="Name" />
+    </label>
+  </p>
+  <p>
+    <label>Phone Number :
+      <input type="text" name="Phone number" id="Phone number" />
+    </label>
+  </p>
+  <p>
+    <label>Email Id :
+      <input type="text" name="email" id="email" />
+    </label>
+  </p>
+  <p>
+    <label>Address :
+      <input type="text" name="address" id="address" />
+    </label>
+  </p>
+  <p>
+    <label>Enquiry :
+      <textarea align="left" name="Enquiry" id="Enquiry" cols="30" rows="5"></textarea>
+    </label>
+  </p>
+  <p>
+    <input type="submit" name="Send" id="Send" value="Submit" />
+  </p>
+</form>
+
 <h2>Email:</h2> <address> <a href="mailto:charles.mberikimpolo@gmail.com" target="_blank"> </address> knowledgesharingcampaign@gmail.com</a>
 <h2>Office Address:</h2> ThoughtWorks Technologies (India) Pvt Ltd. 3rd Floor, Apurupa Silpi, Beside H.P. Petrol Bunk (KFC Building), Gachibowli, Hyderabad - 500032, India
-<h2>Telephone:</h2> 04012345679
+<a href="https://www.google.co.in/maps/place/Thoughtworks+Hyderabad/@17.4430113,78.3574265,15z/data=!4m2!3m1!1s0x0:0x49acd498fc2f1237" target="_blank">
+<img id="googlemap" border="1" alt="go to google maps" align="right" src="/static/images/map.jpeg">
+</a>
+<h2>Telephone:</h2>
+ 04012345679
+
 <h2>Fax:</h2> 04012456787
-<h2></h2>
+
+</body>
 
