Rim|#42|updates of footer and home page

--- a/app/static/htmls/contacts.html
+++ b/app/static/htmls/contacts.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 <link rel="stylesheet" type="text/css" href="/static/css/contacts.css">	
 </head>
@@ -46,4 +48,4 @@
 <h2>Fax:</h2> 04012456787
 
 </body>
-
+</html>>
